gains used before amazon demo
Tested on DCM InPlaceWalk

--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,14 +3,14 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-b_exp: false
-#b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel, b_early_termination
+#b_exp: false
+b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel, b_early_termination
 
 b_joint_pos_test: false
 
 state_estimator:
-    #n_data_com_vel: [200, 200, 250]
-    n_data_com_vel: [20, 20, 20]
+    n_data_com_vel: [200, 200, 200]
+    #n_data_com_vel: [20, 20, 20]
     #n_data_com_vel: [100, 100, 250]
     n_data_ang_vel: [5, 5, 5]
     n_data_cam: [50, 50, 50]
@@ -21,14 +21,14 @@ wbc:
         lambda_rf: 1e-6
         #lambda_rf: 1e-7
         #lambda_rf_new: [1e-6, 1e-6, 1e-6, 1e-6, 1e-6, 1e-6, 1e-6, 1e-6, 1e-6, 1e-6, 1e-6, 1e-6] ## right foot, left foot
-        lambda_rf_new: [1e-4, 1e-4, 1e-5, 1e-6, 1e-6, 1e-6, 1e-4, 1e-4, 1e-5, 1e-6, 1e-6, 1e-6] ## right foot, left foot
+        lambda_rf_new: [1e-4, 1e-4, 1e-4, 1e-6, 1e-6, 1e-6, 1e-4, 1e-4, 1e-4, 1e-6, 1e-6, 1e-6] ## right foot, left foot
 
     contact:
         #rf_z_max: 1000.0
         rf_z_max: 450.0
         w_rf: 0.
         #foot_half_width: 0.04 # 8.5 / 2 (cm)
-        foot_half_width: 0.04 # 8.5 / 2 (cm)
+        foot_half_width: 0.03 # 8.5 / 2 (cm)
         #foot_half_length: 0.05 # 22 / 2 (cm)
         foot_half_length: 0.08 # 22 / 2 (cm)
         mu: 0.3
@@ -59,13 +59,13 @@ wbc:
             #exp_ki: [0.0, 0.0, 0.]
             # Gains for squatting
             #exp_kp: [0.2, 0.1, 25]
-            #exp_kp: [0.1, 0.4, 25]
-            #exp_kd: [0.04, 0.04, 1.5]
-            #exp_ki: [1.0, 1.0, 0.]
-
-            exp_kp: [0.5, 0.5, 25]
+            exp_kp: [0.6, 0.4, 50]
             exp_kd: [0.04, 0.04, 1.5]
-            exp_ki: [0.0, 0.0, 0.]
+            exp_ki: [1.0, 1.0, 0.]
+
+            #exp_kp: [0.3, 0.3, 25]
+            #exp_kd: [0.04, 0.04, 1.5]
+            #exp_ki: [0.02, 0.02, 0.]
             time_constant: 5.
         cam:
             weight: [0., 0., 0.]
@@ -154,29 +154,29 @@ wbc:
                 exp_kd: 0.
         foot_pos:
             weight_at_contact: [10000., 10000., 10000.]
-            weight_at_swing: [500., 500., 500.]
+            weight_at_swing: [1000., 1000., 1000.]
             #weight_at_contact: [40., 40., 40.]
             #weight_at_swing: [20., 20., 20.]
             sim_kp: [300., 300., 300.]
             sim_kd: [30., 30., 30.]
-            #exp_kp: [100, 100, 250]
+            exp_kp: [100, 100, 150]
             #exp_kp: [50, 50, 100]
-            exp_kp: [25, 25, 50]
-            exp_kd: [0.1, 0.1, 1.2]
+            #exp_kp: [25, 25, 50]
+            exp_kd: [0.1, 0.1, 1.0]
             #exp_kd: [0.5, 0.5, 1.5]
         foot_ori:
-            weight_at_contact: [10000., 10000., 10000.]
-            weight_at_swing: [500., 500., 500.]
+            weight_at_contact: [20000., 20000., 20000.]
+            weight_at_swing: [1000., 1000., 1000.]
             #weight_at_contact: [20., 20., 20.]
             #weight_at_swing: [20., 20., 20.]
             sim_kp: [300., 300., 300.]
             sim_kd: [30., 30., 30.]
-            #exp_kp: [20, 20, 20]
+            exp_kp: [20, 20, 20]
             #exp_kp: [10, 10, 10]
-            exp_kp: [5., 5., 5.]
-            #exp_kd: [0.1, 0.1, 0.1]
+            #exp_kp: [5., 5., 5.]
+            exp_kd: [0.1, 0.1, 0.1]
             #exp_kd: [0.3, 0.3, 0.3]
-            exp_kd: [1.5, 1.5, 1.5]
+            #exp_kd: [1.5, 1.5, 1.5]
 
         hand_pos:
           weight_at_min: [0., 0., 0.]
@@ -202,46 +202,46 @@ wbc:
     b_trq_limit: false
 
 balancing:
-    #swaying_amp: [0., 0.08, 0.]
-    #swaying_freq: [0., 0.2, 0.]
+    swaying_amp: [0., 0.08, 0.]
+    swaying_freq: [0., 0.05, 0.]
     #swaying_amp: [0., 0., 0.10]  # squatting behaviour
     #swaying_freq: [0., 0., 0.15]
-    swaying_amp: [0., 0., 0.05]  # squatting behaviour
-    swaying_freq: [0., 0., 0.15]
+    #swaying_amp: [0., 0., 0.05]  # squatting behaviour
+    #swaying_freq: [0., 0., 0.15]
 
     interpolation_local_offset: [0., 0.05, 0.]
     interpolation_duration: 3.
 
 walking:
     ini_joint_dur: 4.
-    ini_transition_dur: 30.
+    ini_transition_dur: 15.
     ini_joint_pos:
         l_shoulder_aa: 0.523
         l_elbow_fe: -1.57
         r_shoulder_aa: -0.523
         r_elbow_fe: -1.57
-        l_hip_aa: 0.
-        #l_hip_aa: 0.047
+        #l_hip_aa: 0.
+        l_hip_aa: 0.047
         #l_hip_aa: 0.060
         #l_hip_aa: 0.160
         l_hip_fe: -0.785
         l_knee_fe_jp: 0.785
         l_knee_fe_jd: 0.785
         l_ankle_fe: -0.785
-        l_ankle_ie: 0.
-        #l_ankle_ie: -0.047
+        #l_ankle_ie: 0.
+        l_ankle_ie: -0.047
         #l_ankle_ie: -0.060
         #l_ankle_ie: -0.160
-        r_hip_aa: 0.
-        #r_hip_aa: -0.047
+        #r_hip_aa: 0.
+        r_hip_aa: -0.047
         #r_hip_aa: -0.060
         #r_hip_aa: -0.160
         r_hip_fe: -0.785
         r_knee_fe_jp: 0.785
         r_knee_fe_jd: 0.785
         r_ankle_fe: -0.785
-        r_ankle_ie: 0.
-        #r_ankle_ie: 0.047
+        #r_ankle_ie: 0.
+        r_ankle_ie: 0.047
         #r_ankle_ie: 0.060
         #r_ankle_ie: 0.160
         neck_pitch: 0.
@@ -270,25 +270,31 @@ walking:
     #com_height: 0.85
     #com_height: 1.
 
-    swing_height: 0.03
+    swing_height: 0.04
 
-    t_additional_ini_trans: 0.
-    t_contact_trans: 0.45
-    t_swing: 0.45
+    #t_additional_ini_trans: 0.
+    #t_contact_trans: 0.45
+    #t_swing: 0.45
+    #percentage_settle: 0.9
+    #alpha_ds: 0.5
+
+    t_additional_ini_trans: 0.2
+    t_contact_trans: 1.6
+    t_swing: 0.8
     percentage_settle: 0.9
     alpha_ds: 0.5
 
     #nominal_footwidth: 0.28
-    nominal_footwidth: 0.20
+    nominal_footwidth: 0.24
     nominal_forward_step: 0.1
     nominal_backward_step: -0.1
     nominal_turn_radians: 0.3
     nominal_strafe_distance: 0.02
 
-    n_steps: 5
+    n_steps: 1
 
 static_walking:
-    moving_duration: 3
+    moving_duration: 2
     #com_height: 0.68
     #com_height: 0.92
     com_height: 0.90
@@ -309,16 +315,16 @@ static_balancing:
     landing_duration: 1.
 
 hand_reaching:
-  left_hand_duration: 2.
-  left_hand_rel_target_pos: [0., 0.2, 0.] ## forward reaching
+  left_hand_duration: 2.5
+  left_hand_rel_target_pos: [0., 0.3, 0.] ## forward reaching
   left_hand_rel_target_ori: [1., 0., 0., 0.] #quat_w, quat_x, quat_y, quat_z order
 
-  right_hand_duration: 3.
-  right_hand_rel_target_pos: [0.2, 0., 0.] ## side reaching (outwards)
+  right_hand_duration: 2.5
+  right_hand_rel_target_pos: [0.0, 0., 0.3] ## side reaching (outwards)
   right_hand_rel_target_ori: [1., 0., 0., 0.] #quat_w, quat_x, quat_y, quat_z order
 
 controller:
     waiting_count: 10
-    #b_smoothing: true
-    b_smoothing: false
+    b_smoothing: true
+    #b_smoothing: false
     smoothing_duration: 0.2
