--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -14,6 +14,8 @@ state_estimator:
     #n_data_com_vel: [100, 100, 250]
     n_data_ang_vel: [5, 5, 5]
     n_data_cam: [50, 50, 50]
+    base_com_vel_time_constant: 0.1
+    b_use_exp_filter: true
 
 wbc:
     regularization:
