--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -18,7 +18,7 @@ state_estimator:
     b_use_exp_filter: true
 
 contact_estimator:
-    foot_half_width: 0.425  # 8.5 / 2 (cm)
+    foot_half_width: 0.0425  # 8.5 / 2 (cm)
     foot_half_length: 0.11  # 22 / 2 (cm)
     contact_tol: 0.001      # tolerance in height to determine swing foot touchdown
 
@@ -268,6 +268,7 @@ walking:
 
 
     b_early_termination: false
+    b_early_heel_toe_contact: true
     foot_height_threshold: 0.01
 
     #com_height: 0.68
