--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -70,6 +70,8 @@ wbc:
             exp_kp: [0.5, 0.3, 50]  ##TODO RETUNE
             exp_kd: [0.04, 0.04, 1.5]
             exp_ki: [1.0, 1.0, 0.]  ##TODO RETUNE
+            leaky_integrator: true
+            leak_rate: 0.5
 
             #exp_kp: [0.3, 0.3, 25]
             #exp_kd: [0.04, 0.04, 1.5]
