--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,19 +3,19 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-#b_exp: false
-b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel, b_early_termination
+b_exp: false
+#b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel, b_early_termination
 
 b_joint_pos_test: false
 
 state_estimator:
-    n_data_com_vel: [150, 200, 250]
-    #n_data_com_vel: [20, 20, 20]
+    #n_data_com_vel: [150, 200, 250]
+    n_data_com_vel: [20, 20, 20]
     #n_data_com_vel: [100, 100, 250]
     n_data_ang_vel: [5, 5, 5]
     n_data_cam: [50, 50, 50]
     base_com_vel_time_constant: 0.1
-    b_use_exp_filter: true
+    b_use_exp_filter: false
 
 contact_estimator:
     foot_half_width: 0.0425  # 8.5 / 2 (cm)
@@ -31,8 +31,8 @@ wbc:
         lambda_rf_new: [1e-4, 1e-4, 1e-4, 1e-6, 1e-6, 1e-6, 1e-4, 1e-4, 1e-4, 1e-6, 1e-6, 1e-6] ## right foot, left foot
 
     contact:
-        #rf_z_max: 1000.0
-        rf_z_max: 450.0
+        rf_z_max: 1000.0
+        #rf_z_max: 450.0
         w_rf: 0.
         #foot_half_width: 0.04 # 8.5 / 2 (cm)
         foot_half_width: 0.03 # 8.5 / 2 (cm)
@@ -40,7 +40,7 @@ wbc:
         foot_half_length: 0.08 # 22 / 2 (cm)
         mu: 0.3
         #mu: 0.5
-        use_smooth_interpolation: true
+        use_smooth_interpolation: false
 
     task:
         com_control_feedback_source: 1 # 0: com feedback, 1: icp feedback
@@ -67,7 +67,7 @@ wbc:
             #exp_ki: [0.0, 0.0, 0.]
             # Gains for squatting
             #exp_kp: [0.2, 0.1, 25]
-            exp_kp: [0.5, 0.3, 50]  ##TODO RETUNE
+            exp_kp: [0.3, 0.2, 25]  ##TODO RETUNE
             exp_kd: [0.04, 0.04, 1.5]
             exp_ki: [1.0, 1.0, 0.]  ##TODO RETUNE
             leaky_integrator: true
@@ -76,7 +76,7 @@ wbc:
             #exp_kp: [0.3, 0.3, 25]
             #exp_kd: [0.04, 0.04, 1.5]
             #exp_ki: [0.02, 0.02, 0.]
-            time_constant: 5.
+            time_constant: 5
         cam:
             weight: [0., 0., 0.]
             sim_kp: [0., 0., 0.] # will be ignored
@@ -169,10 +169,10 @@ wbc:
             #weight_at_swing: [20., 20., 20.]
             sim_kp: [300., 300., 300.]
             sim_kd: [30., 30., 30.]
-            exp_kp: [100, 100, 150]
+            exp_kp: [100, 100, 200]
             #exp_kp: [50, 50, 100]
             #exp_kp: [25, 25, 50]
-            exp_kd: [0.1, 0.1, 1.0]
+            exp_kd: [0.1, 0.1, 1.5]
             #exp_kd: [0.5, 0.5, 1.5]
         foot_ori:
             weight_at_contact: [10000., 10000., 10000.]
@@ -212,12 +212,12 @@ wbc:
     b_trq_limit: false
 
 balancing:
-    swaying_amp: [0., 0.08, 0.]
-    swaying_freq: [0., 0.05, 0.]
+    #swaying_amp: [0., 0.08, 0.]
+    #swaying_freq: [0., 0.05, 0.]
     #swaying_amp: [0., 0., 0.10]  # squatting behaviour
     #swaying_freq: [0., 0., 0.15]
-    #swaying_amp: [0., 0., 0.05]  # squatting behaviour
-    #swaying_freq: [0., 0., 0.15]
+    swaying_amp: [0., 0., 0.05]  # squatting behaviour
+    swaying_freq: [0., 0., 0.15]
 
     interpolation_local_offset: [0., 0.05, 0.]
     interpolation_duration: 3.
@@ -271,7 +271,7 @@ walking:
 
 
     b_early_termination: false
-    b_early_heel_toe_contact: true
+    b_early_heel_toe_contact: false
     foot_height_threshold: 0.01
 
     #com_height: 0.68
@@ -281,7 +281,7 @@ walking:
     #com_height: 0.85
     #com_height: 1.
 
-    swing_height: 0.04
+    swing_height: 0.03
 
     #t_additional_ini_trans: 0.
     #t_contact_trans: 0.45
@@ -290,7 +290,7 @@ walking:
     #alpha_ds: 0.5
 
     t_additional_ini_trans: 0.4
-    t_contact_trans: 1.6
+    t_contact_trans: 1.0
     t_swing: 0.8
     percentage_settle: 0.9
     alpha_ds: 0.5
@@ -327,7 +327,7 @@ static_balancing:
 
 hand_reaching:
   left_hand_duration: 3.0
-  left_hand_rel_target_pos: [0., 0.20, 0.] ## forward reaching
+  left_hand_rel_target_pos: [0., 0.15, 0.] ## forward reaching
   left_hand_rel_target_ori: [1., 0., 0., 0.] #quat_w, quat_x, quat_y, quat_z order
 
   right_hand_duration: 3.0
@@ -336,7 +336,7 @@ hand_reaching:
 
 controller:
     waiting_count: 10
-    b_smoothing: true
-    #b_smoothing: false
+    #b_smoothing: true
+    b_smoothing: false
     smoothing_duration: 0.2
-    use_modified_swing_jac: false
+    use_modified_swing_jac: true
