--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -282,6 +282,7 @@ walking:
     #com_height: 1.
 
     swing_height: 0.04
+    b_use_quintic_spline_in_swing: true
 
     #t_additional_ini_trans: 0.
     #t_contact_trans: 0.45
