--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,8 +3,8 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-b_exp: false
-#b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel, b_early_termination
+#b_exp: false
+b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel, b_early_termination
 
 b_joint_pos_test: false
 
@@ -14,8 +14,8 @@ state_estimator:
     #n_data_com_vel: [100, 100, 250]
     n_data_ang_vel: [5, 5, 5]
     n_data_cam: [50, 50, 50]
-    base_com_vel_time_constant: 0.1
-    b_use_exp_filter: false
+    base_com_vel_time_constant: 0.2
+    b_use_exp_filter: true
     dcm_vel_filter_alpha: 0.1
 
 contact_estimator:
@@ -32,8 +32,8 @@ wbc:
         lambda_rf_new: [1e-4, 1e-4, 1e-4, 1e-6, 1e-6, 1e-6, 1e-4, 1e-4, 1e-4, 1e-6, 1e-6, 1e-6] ## right foot, left foot
 
     contact:
-        rf_z_max: 1000.0
-        #rf_z_max: 450.0
+        #rf_z_max: 1000.0
+        rf_z_max: 450.0
         w_rf: 0.
         #foot_half_width: 0.04 # 8.5 / 2 (cm)
         foot_half_width: 0.03 # 8.5 / 2 (cm)
@@ -41,7 +41,7 @@ wbc:
         foot_half_length: 0.08 # 22 / 2 (cm)
         mu: 0.3
         #mu: 0.5
-        use_smooth_interpolation: false
+        use_smooth_interpolation: true
 
     task:
         com_control_feedback_source: 1 # 0: com feedback, 1: icp feedback
@@ -68,19 +68,20 @@ wbc:
             #exp_ki: [0.0, 0.0, 0.]
             # Gains for squatting
             #exp_kp: [0.2, 0.1, 25]
-            exp_kp: [1.0, 0.7, 50]  ##TODO RETUNE
+            exp_kp: [1.4, 1.0, 50]  ##TODO RETUNE
             exp_kd: [0.04, 0.04, 1.5]
-            exp_ki: [1.0, 1.0, 0.]  ##TODO RETUNE
+            exp_ki: [0.0, 0.0, 0.]  ##TODO RETUNE
 
             exp_filt_err_limit: [0.03, 0.03] ## x, y
+            leaky_integrator_limit: [0.03, 0.03] ## x, y
 
-            leaky_integrator: true
+            leaky_integrator: false
             leak_rate: 0.5
 
             #exp_kp: [0.3, 0.3, 25]
             #exp_kd: [0.04, 0.04, 1.5]
             #exp_ki: [0.02, 0.02, 0.]
-            time_constant: 5
+            time_constant: 0.2
         cam:
             weight: [0., 0., 0.]
             sim_kp: [0., 0., 0.] # will be ignored
@@ -216,12 +217,12 @@ wbc:
     b_trq_limit: false
 
 balancing:
-    #swaying_amp: [0., 0.08, 0.]
-    #swaying_freq: [0., 0.05, 0.]
+    swaying_amp: [0., 0.08, 0.]
+    swaying_freq: [0., 0.1, 0.]
     #swaying_amp: [0., 0., 0.10]  # squatting behaviour
     #swaying_freq: [0., 0., 0.15]
-    swaying_amp: [0., 0., 0.05]  # squatting behaviour
-    swaying_freq: [0., 0., 0.15]
+    #swaying_amp: [0., 0., 0.05]  # squatting behaviour
+    #swaying_freq: [0., 0., 0.15]
 
     interpolation_local_offset: [0., 0.05, 0.]
     interpolation_duration: 3.
@@ -235,7 +236,8 @@ walking:
         r_shoulder_aa: -0.523
         r_elbow_fe: -1.57
         #l_hip_aa: 0.
-        l_hip_aa: 0.047
+        #l_hip_aa: 0.047
+        l_hip_aa: 0.020
         #l_hip_aa: 0.060
         #l_hip_aa: 0.160
         l_hip_fe: -0.785
@@ -243,11 +245,13 @@ walking:
         l_knee_fe_jd: 0.785
         l_ankle_fe: -0.785
         #l_ankle_ie: 0.
-        l_ankle_ie: -0.047
+        #l_ankle_ie: -0.047
+        l_ankle_ie: -0.020
         #l_ankle_ie: -0.060
         #l_ankle_ie: -0.160
         #r_hip_aa: 0.
-        r_hip_aa: -0.047
+        #r_hip_aa: -0.047
+        r_hip_aa: -0.020
         #r_hip_aa: -0.060
         #r_hip_aa: -0.160
         r_hip_fe: -0.785
@@ -255,7 +259,8 @@ walking:
         r_knee_fe_jd: 0.785
         r_ankle_fe: -0.785
         #r_ankle_ie: 0.
-        r_ankle_ie: 0.047
+        #r_ankle_ie: 0.047
+        r_ankle_ie: 0.020
         #r_ankle_ie: 0.060
         #r_ankle_ie: 0.160
         neck_pitch: 0.
@@ -294,14 +299,14 @@ walking:
     #percentage_settle: 0.9
     #alpha_ds: 0.5
 
-    t_additional_ini_trans: 0.4
+    t_additional_ini_trans: 0.8
     t_contact_trans: 1.0
     t_swing: 0.8
     percentage_settle: 0.9
     alpha_ds: 0.5
 
     #nominal_footwidth: 0.28
-    nominal_footwidth: 0.24
+    nominal_footwidth: 0.22
     nominal_forward_step: 0.1
     nominal_backward_step: -0.1
     nominal_turn_radians: 0.3
@@ -341,7 +346,7 @@ hand_reaching:
 
 controller:
     waiting_count: 10
-    #b_smoothing: true
-    b_smoothing: false
+    b_smoothing: true
+    #b_smoothing: false
     smoothing_duration: 0.2
-    use_modified_swing_jac: true
+    use_modified_swing_jac: false
