created interpolation folder with single hermite_curve_vec for all kinds of curves
note: the only curve that does not inherit from hermite curve, yet, is
the HermiteQuaternionCurve

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,5 +1,7 @@
 FILE(GLOB_RECURSE sources "*.cpp")
 FILE(GLOB_RECURSE headers "*.hpp")
+FILE(GLOB interpolation_sources "interpolation/*.cpp")
+FILE(GLOB interpolation_headers "interpolation/*.hpp")
 
 add_library(pnc-utils ${sources})
 target_link_libraries(pnc-utils pnc-yaml)
