--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -20,7 +20,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Test build
         run: |
-          ls
+          export CMAKE_PREFIX_PATH=/opt/openrobots:$CMAKE_PREFIX_PATH
+          export CMAKE_PREFIX_PATH=/usr/local:$CMAKE_PREFIX_PATH
           mkdir build 
           cd build 
           cmake .. 
