--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           export CMAKE_PREFIX_PATH=/opt/openrobots:$CMAKE_PREFIX_PATH
           export CMAKE_PREFIX_PATH=/usr/local/include:$CMAKE_PREFIX_PATH
+          ls /usr/local/include
           mkdir build 
           cd build 
           cmake .. 
