test CI altogether while we are at it

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -13,6 +13,14 @@ jobs:
           ./scripts/install/install_cmake.sh && ./scripts/install/gh_install_dart.sh 
           ./scripts/install/install_doxygen.sh && ./scripts/install/install_protobuf.sh 
           ./scripts/install/install_zmq.sh
+          export CMAKE_PREFIX_PATH=/opt/openrobots:$CMAKE_PREFIX_PATH
+          export CMAKE_PREFIX_PATH=/usr/local/include:$CMAKE_PREFIX_PATH
+          ls /usr/local/include
+          mkdir build 
+          cd build 
+          cmake .. 
+          make 
+          ./bin/hermite_curves_test
 
   build:
     needs: setup
