--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -15,6 +15,15 @@ jobs:
           ./scripts/install/install_zmq.sh
           sudo apt install python3-pip
           pip install "pybind11[global]"
+          cd ${PATH_PACKAGE}/../
+          git clone https://github.com/google/googletest.git 
+          cd googletest &&
+          git checkout tags/release-1.11.0 
+          mkdir build 
+          cd build 
+          cmake .. && make -j4 
+          sudo make install
+          cd ${PATH_PACKAGE}  
           export CMAKE_PREFIX_PATH=/opt/openrobots:$CMAKE_PREFIX_PATH
           export CMAKE_PREFIX_PATH=/usr/local/include:$CMAKE_PREFIX_PATH
           ls /usr/local/include
