--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
+          ./scripts/install/install_gtest.sh
           ./scripts/install/install_cmake.sh && ./scripts/install/gh_install_dart.sh 
           ./scripts/install/install_doxygen.sh && ./scripts/install/install_protobuf.sh 
           ./scripts/install/install_zmq.sh
