--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,7 +135,7 @@ endif()
 
 # unit-testing tools
 set(B_BUILD_GTESTS true)
-set(B_FETCH_GTEST_PKG true)
+set(B_FETCH_GTEST_PKG false)
 
 ##=============================================================================
 ## Add Subdirectory
